--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Programming training project",
   "main": "index.js",
   "scripts": {
-      "dev": "next dev",
-      "build": "next build",
-      "start": "next start"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint:check": "prettier --check .",
+    "lint:fix": "prettier --write ."
   },
   "author": "",
   "license": "MIT",
@@ -14,5 +16,8 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
