--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@commitlint/cli": "19.4.0",
     "@commitlint/config-conventional": "19.8.1",
+    "@faker-js/faker": "9.7.0",
     "@typescript-eslint/parser": "^8.35.0",
     "commitizen": "4.3.1",
     "concurrently": "8.2.2",
