--- a/.env.development
+++ b/.env.development
@@ -6,3 +6,9 @@ POSTGRES_PASSWORD="local_password"
 DATABASE_URL="postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@$POSTGRES_HOST:$POSTGRES_PORT/$POSTGRES_DB"
 ENVIROMENT=development
 
+EMAIL_SMPT_HOST=localhost
+EMAIL_SMPT_PORT=1025
+EMAIL_SMPT_USER=
+EMAIL_SMPT_PASSWORD=
+EMAIL_HTTP_HOST=localhost
+EMAIL_HTTP_PORT=1080
